# football-reminder-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly.yaml  image.yaml
src/: commands.rs  main.rs  models.rs  utils.rs
