[package]
name = "football-reminder-bot"
version = "0.3.9"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
miette = { version = "7.5.0", features = ["fancy"] }
dotenvy = "0.15.7"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }

[profile.release]
strip = true
